stoat/src/snapshots/stoat__test_harness__snapshot_open_rust_file_highlights_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[36m┌──────────────────────────────────────┐[0m
[0m[36m│[0m[1m[34mfn[0m[36m [0m[33mmain[0m[37m()[0m[36m [0m[37m{[0m                           [0m[36m│[0m
[0m[36m│    [0m[1m[34mlet[0m[36m [0m[97mx[0m[36m [0m[96m=[0m[36m [0m[32m"hi"[0m[37m;[0m                     [0m[36m│[0m
[0m[36m│[0m[37m}[0m                                     [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m└──────────────────────────────────────┘[0m
