stoat/src/snapshots/stoat__test_harness__snapshot_open_rust_file_then_edit_highlights.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: edit
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mfn[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;229;192;123m[48;2;40;44;52ma[0m[38;2;171;178;191m[48;2;40;44;52m()[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m{[0m[38;2;250;250;250m[48;2;40;44;52m [0m[1m[38;2;97;175;239m[48;2;40;44;52mlet[0m[38;2;250;250;250m[48;2;40;44;52m x [0m[38;2;110;213;222m[48;2;40;44;52m=[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;198;120;221m[48;2;40;44;52m1[0m[38;2;171;178;191m[48;2;40;44;52m;[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m}[0m[38;2;250;250;250m[48;2;40;44;52m               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) /test/edit.rs [+] [0m[38;2;99;109;131m[48;2;99;109;131m─[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
