stoat/src/snapshots/stoat__test_harness__snapshot_open_rust_file_with_fold_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: fold
focused: #1 of 1
mode: normal
size: 40x8
---
[0m[36m┌──────────────────────────────────────┐[0m
[0m[36m│[0m[1m[34mfn[0m[36m [0m[33ma[0m[37m()[0m[36m [0m[37m{[0m[36m [0m[35m1[0m[36m [0m[37m}[0m                          [0m[36m│[0m
[0m[36m│[0m[1m[34mfn[0m[36m [0m[33mb[0m[37m()[0m[36m ...[0m                            [0m[36m│[0m
[0m[36m│ [0m[37m}[0m                                    [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m└──────────────────────────────────────┘[0m
